tests/error/modifier_errors/ctrl_arg_type.err
Error: Type mismatch (at $FILE:7:20)
  | 
5 | def test() -> None:
6 |     x = qubit()
7 |     with control(x, True):
  |                     ^^^^ Expected expression of type `qubit`, got `bool`

Guppy compilation failed due to 1 previous error
